# chloe_bot

./: .gitignore  Cargo.toml  docker-compose.yml  stuff.txt
.github/workflows/: rust.yml
.sqlx/: query-91571080ae1f16384fad1e843b985c2477696b61092be8ff5ebc3f557489346e.json  query-b9038b03596883ad3cd2a8af9b4706d9ba1456238356f8d00b9c5507df8a7f17.json
migrations/: 20230902133306_init.up.sql  20230903154619_scopes.down.sql  20230903154619_scopes.up.sql  20230903160104_fixinguser.down.sql  20230903160104_fixinguser.up.sql  20230903161012_modifyuser_scopes.down.sql  20230903161012_modifyuser_scopes.up.sql  20230903165317_fix_users_unique.down.sql  20230903165317_fix_users_unique.up.sql  20230903172545_rework2.up.sql  20230903173704_rework3.up.sql  20230903175543_idkifthisright.up.sql  20230903181250_update_func.down.sql  20230903181250_update_func.up.sql  20230906182938_add_command.down.sql  20230906182938_add_command.up.sql  20230915204608_fix_on_delete.up.sql
src/: lib.rs  main.rs
src/commands/: mod.rs  modules.rs  test.rs
src/telemetry/: telemetry.rs
src/webserver/: server.rs
src/webserver/routes/oauth/: auth.rs
src/websocket/: bot_commands_parser.rs  client.rs  init.rs  message_parser.rs  mod.rs  moderation.rs
