[package]
name = "chloe_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.32.0", features = ["full","signal"] }
log = "0.4.17"
futures = "0.3"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
url = "2.3.1"
tungstenite = "0.20.0"
env_logger = "0.10.0"
dotenv = "0.15.0"
actix-web = "4"
actix-rt = "2.2.0"
async-channel = "1.9.0"