[package]
name = "chloe_bot"
version = "0.1.0"
edition = "2021"
authors = ["Chloe Pratas <chloevision97@gmail.com>"]
description = "A Bot for Twitch Chat"
license = "MIT"
repository = "https://github.com/Chloe199719/chloe_bot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "chloe_bot"

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.32.0", features = ["full","signal"] }
futures = "0.3"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
async-channel = "1.9.0"
actix-web = "4"
actix-rt = "2.2.0"

url = "2.3.1"

log = "0.4.17"
env_logger = "0.10.0"
dotenv = "0.15.0"

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["serde","clock"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"