[package]
name = "chloe_bot"
version = "0.1.0"
edition = "2021"
authors = ["Chloe Pratas <chloevision97@gmail.com>"]
description = "A Bot for Twitch Chat"
license = "MIT"
repository = "https://github.com/Chloe199719/chloe_bot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "chloe_bot"


[dependencies]
tokio-tungstenite = {features = ["native-tls"] , version = "*"}
tokio = { version = "1.32.0", features = ["full","signal"] }
futures = "0.3"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
async-channel = "1.9.0"
actix-web =  {version="4", features = ["openssl"]}
actix-rt = "2.2.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.3.1"
openssl = { version = "0.10", features = ["v110"] }
log = "0.4.17"
env_logger = "0.10.0"
dotenv = "0.15.0"

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["serde","clock"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
rand = "0.8.5"
secrecy = { version = "0.8", features = ["serde"] }
tracing = { version ="^0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter","registry"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"

[dependencies.sqlx]
version ="0.7.1"
default-features = false
features = ["postgres", "runtime-tokio-rustls", "macros", "chrono","uuid", "migrate"]

[dependencies.native-tls-crate]
optional = true
package = "native-tls"
version = "0.2.3"